--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
-"scripts": {
-  "start": "node server.js",
-  "bot": "node bot.js",
-  "dev": "concurrently \"npm run start\" \"npm run bot\""
+{
+  "name": "yzemanbot-backend",
+  "version": "1.0.0",
+  "description": "Backend for YzemanBot Telegram Mini App",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "pg": "^8.11.3",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
