--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://user:password@localhost/yzemanbot
+DATABASE_URL=postgresql://donate_user:4h7ZqglFJOyW1ktOJYZpkev6uDhnSABn@dpg-d2bg5fadbo4c73aq8sig-a.oregon-postgres.render.com/donate
 BOT_TOKEN=6235048166:AAE7jQItOA3n5tqn_971ih6RQ8qvPY4V7X0
 ADMIN_CHAT_ID=1828689837
 WEBAPP_URL=https://yzemanbot-mini-app.onrender.com
