--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "scripts": {
-    "start": "node server.js",
-    "build": "bash .render/build.sh"
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "dotenv": "^16.3.1"
   }
 }
