--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+    "bot": "node bot.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
