--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "yzemanbot-backend",
+  "name": "yzemanbot",
   "version": "1.0.0",
+  "description": "YzemanBot Mini App and Telegram Bot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-    "bot": "node bot.js"
+    "start": "node server.js",
+    "bot": "node bot.js",
+    "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-telegram-bot-api": "^0.65.0",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
