--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://donate_user:4h7ZqglFJOyW1ktOJYZpkev6uDhnSABn@dpg-d2bg5fadbo4c73aq8sig-a.oregon-postgres.render.com/donate
 BOT_TOKEN=6235048166:AAE7jQItOA3n5tqn_971ih6RQ8qvPY4V7X0
 ADMIN_CHAT_ID=1828689837
-PORT=3001  # For main app
+MINI_APP_URL=https://yzemanbot-backend.onrender.com
 BOT_PORT=3002  # For Telegram bot
