--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  {
+  "name": "yzeman-bot",
+  "version": "1.0.0",
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "nanoid": "^4.0.0",
+    "node-telegram-bot-api": "^1.0.1",
+    "pg": "^8.8.0"
+  }
+},
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.3",
