--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "resolutions": {
+  "form-data": "4.0.0",
+  "tough-cookie": "4.1.3"
+},
+"overrides": {
+  "form-data": "4.0.0",
+  "tough-cookie": "4.1.3"
+}
 }
