--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "node server.js",
     "bot": "node bot.js",
     "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm list node-telegram-bot-api"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nanoid": "^4.0.0",
-    "node-telegram-bot-api": "^1.8.0",
+    "node-telegram-bot-api": "1.8.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
@@ -25,11 +26,11 @@
     "node": ">=18.0.0"
   },
   "resolutions": {
-  "form-data": "4.0.0",
-  "tough-cookie": "4.1.3"
-},
-"overrides": {
-  "form-data": "4.0.0",
-  "tough-cookie": "4.1.3"
-}
+    "form-data": "4.0.0",
+    "tough-cookie": "4.1.3"
+  },
+  "overrides": {
+    "form-data": "4.0.0",
+    "tough-cookie": "4.1.3"
+  }
 }
