--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "yzemanbot",
   "version": "1.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js",
+    "db": "pg_ctl -D $PREFIX/var/lib/postgresql start"
+  },
   "dependencies": {
     "node-telegram-bot-api": "0.61.0",
-    "form-data": "4.0.0",
-    "tough-cookie": "4.1.3"
-  },
-  "overrides": {
-    "form-data": "4.0.0",
-    "tough-cookie": "4.1.3"
+    "pg": "8.11.3",
+    "dotenv": "16.4.5"
   }
 }
