--- a/package.json
+++ b/package.json
@@ -1,8 +1,35 @@
 {
   "name": "yzemanbot",
   "version": "1.0.0",
+  "description": "YzemanBot Mini App and Telegram Bot",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "bot": "node bot.js",
+    "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm audit --production",
+    "db:start": "pg_ctl start -D $PREFIX/var/lib/postgresql",
+    "db:stop": "pg_ctl stop -D $PREFIX/var/lib/postgresql"
+  },
   "dependencies": {
-    "node-telegram-bot-api": "0.61.0",
+    "axios": "1.7.2",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "nanoid": "4.0.0",
+    "node-telegram-bot-api": "1.8.0",
+    "pg": "8.11.3",
+    "form-data": "4.0.0",
+    "tough-cookie": "4.1.3"
+  },
+  "devDependencies": {
+    "concurrently": "8.2.2",
+    "nodemon": "3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "resolutions": {
     "form-data": "4.0.0",
     "tough-cookie": "4.1.3"
   },
