--- a/package.json
+++ b/package.json
@@ -4,30 +4,24 @@
   "description": "YzemanBot Mini App and Telegram Bot",
   "main": "server.js",
   "scripts": {
-    "start": "PGPORT=5433 node server.js",
-    "bot": "PGPORT=5433 node bot.js",
+    "start": "node server.js",
+    "bot": "node bot.js",
     "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm audit --production",
-    "db:init": "rm -rf $PREFIX/var/lib/postgresql/* && initdb -D $PREFIX/var/lib/postgresql --auth=trust && echo \"unix_socket_directories = '/tmp'\" >> $PREFIX/var/lib/postgresql/postgresql.conf && echo \"port = 5433\" >> $PREFIX/var/lib/postgresql/postgresql.conf",
-    "db:start": "pg_ctl -D $PREFIX/var/lib/postgresql -o \"-p 5433\" start",
-    "db:stop": "pg_ctl -D $PREFIX/var/lib/postgresql stop",
-    "db:create": "PGPORT=5433 createdb yzenanbot",
-    "db:reset": "npm run db:stop && npm run db:init && npm run db:start && npm run db:create"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "1.7.2",
-    "dotenv": "16.4.5",
-    "express": "4.19.2",
-    "nanoid": "4.0.0",
-    "node-telegram-bot-api": "1.8.0",
-    "pg": "8.11.3",
-    "form-data": "4.0.0",
-    "tough-cookie": "4.1.3"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nanoid": "^4.0.0",
+    "node-telegram-bot-api": "^1.0.1",
+    "pg": "^8.11.3",
+    "form-data": "^4.0.0",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
-    "concurrently": "8.2.2",
-    "nodemon": "3.1.0"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
