--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "start": "node server.js",
     "bot": "node bot.js",
     "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:init": "mkdir -p $PREFIX/var/lib/postgresql && initdb -D $PREFIX/var/lib/postgresql --auth=trust",
+    "db:config": "echo \"unix_socket_directories = '/tmp'\" >> $PREFIX/var/lib/postgresql/postgresql.conf && echo \"port = 5433\" >> $PREFIX/var/lib/postgresql/postgresql.conf",
+    "db:start": "pg_ctl -D $PREFIX/var/lib/postgresql -l $PREFIX/var/lib/postgresql/logfile -o \"-p 5433\" start",
+    "db:stop": "pg_ctl -D $PREFIX/var/lib/postgresql stop",
+    "db:create": "PGPORT=5433 createdb yzenanbot",
+    "db:reset": "npm run db:stop && npm run db:init && npm run db:config && npm run db:start && npm run db:create"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "nanoid": "^4.0.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "pg": "^8.11.3"
+    "axios": "1.7.2",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "nanoid": "4.0.0",
+    "node-telegram-bot-api": "0.61.0",
+    "pg": "8.11.3"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.0"
+    "concurrently": "8.2.2",
+    "nodemon": "3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
