--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "YzemanBot Mini App and Telegram Bot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "bot": "node bot.js",
-    "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
+    "dev": "NODE_ENV=development concurrently \"nodemon server.js\" \"nodemon bot.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:init": "mkdir -p $PREFIX/var/lib/postgresql && initdb -D $PREFIX/var/lib/postgresql --auth=trust",
-    "db:config": "echo \"unix_socket_directories = '/tmp'\" >> $PREFIX/var/lib/postgresql/postgresql.conf && echo \"port = 5433\" >> $PREFIX/var/lib/postgresql/postgresql.conf",
     "db:start": "pg_ctl -D $PREFIX/var/lib/postgresql -l $PREFIX/var/lib/postgresql/logfile -o \"-p 5433\" start",
-    "db:stop": "pg_ctl -D $PREFIX/var/lib/postgresql stop",
-    "db:create": "PGPORT=5433 createdb yzenanbot",
-    "db:reset": "npm run db:stop && npm run db:init && npm run db:config && npm run db:start && npm run db:create"
+    "postinstall": "if [ \"$NODE_ENV\" = \"production\" ]; then npm audit fix --force; fi"
   },
   "dependencies": {
     "axios": "1.7.2",
