--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ BOT_TOKEN=6235048166:AAE7jQItOA3n5tqn_971ih6RQ8qvPY4V7X0
 ADMIN_CHAT_ID=1828689837
 MINI_APP_URL=https://yzemanbot-backend.onrender.com
 BOT_PORT=3002  # For Telegram bot
+NODE_ENV=production
 NODE_VERSION = 18
