--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
 cat > .gitignore << 'EOL'
+# Dependency directories
 node_modules/
+.pnpm/
+
+# Environment files
 .env
-package-lock.json
+.env.*
+!.env.example
+
+# Build artifacts
+dist/
+build/
+
+# Logs
 *.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+*.pid
+*.seed
+*.pid.lock
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 EOL
