--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "1.7.2",
-    "dotenv": "16.4.5",
-    "express": "4.19.2",
-    "nanoid": "4.0.0",
-    "node-telegram-bot-api": "0.61.0",
-    "pg": "8.11.3"
+  "axios": "1.7.2",
+  "dotenv": "^16.0.0",
+  "express": "^4.18.1",
+  "nanoid": "4.0.0",
+  "pg": "8.11.3",
+  "body-parser": "^1.20.1",
+  "axios": "^1.6.7",
+  "node-telegram-bot-api": "0.61.0",
+  "crypto": "latest"
   },
   "devDependencies": {
     "concurrently": "8.2.2",
