--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "name": "yzemanbot",
   "version": "1.0.0",
-  "description": "YzemanBot Mini App and Telegram Bot",
+  "description": "YzemanBot Earn System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "bot": "node bot.js",
     "dev": "concurrently \"nodemon server.js\" \"nodemon bot.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "concurrently \"node server.js\" \"node bot.js\""
   },
   "dependencies": {
-  "axios": "1.7.2",
-  "dotenv": "^16.0.0",
-  "express": "^4.18.1",
-  "nanoid": "4.0.0",
-  "pg": "8.11.3",
-  "body-parser": "^1.20.1",
-  "axios": "^1.6.7",
-  "node-telegram-bot-api": "0.61.0",
-  "crypto": "latest"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "pg": "^8.11.3",
+    "body-parser": "^1.20.1",
+    "crypto": "latest"
   },
   "devDependencies": {
-    "concurrently": "8.2.2",
-    "nodemon": "3.1.0"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   }
 }
